--- a/pom.xml
+++ b/pom.xml
@@ -24,6 +24,7 @@
 
     <properties>
         <slf4j.version>1.7.25</slf4j.version>
+        <spring.version>4.3.7.RELEASE</spring.version>
         <guava.version>21.0</guava.version>
         <commons-lang3.version>3.5</commons-lang3.version>
         <fastjson.version>1.2.31</fastjson.version>
@@ -63,6 +64,11 @@
             <groupId>joda-time</groupId>
             <artifactId>joda-time</artifactId>
             <version>${joda.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
         </dependency>
     </dependencies>
 
